third_party/move/move-compiler-v2/tests/visibility-checker/v1-naming/named_address_distinct_from_each_others_value.exp

Diagnostics:
error: constant `0x42::M::C` cannot be used here because it is private to the module `0x42::M`
   ┌─ tests/visibility-checker/v1-naming/named_address_distinct_from_each_others_value.move:18:9
   │
18 │         B::M::C;
   │         ^^^^^^^
